--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>点菜网页</title>
+    <title>付总今日菜单</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
         <section class="cart" id="cart">
             <h2>购物车</h2>
             <ul id="cartItems"></ul>
-            <button onclick="confirmOrder()">确认订单</button>
+            <button onclick="confirmOrder()">确定</button>
         </section>
     </main>
 
